Don't compile all importers to make things faster

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -23,4 +23,49 @@ set( ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "Build assimp tools" )
 set( ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build assimp tests" )
 set( ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "Build assimp samples" )
 
+set( ASSIMP_BUILD_3DS_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_AC_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_ASE_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_ASSBIN_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_ASSXML_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_B3D_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_BVH_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_COLLADA_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_DXF_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_CSM_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_HMP_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_IRRMESH_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_IRR_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_LWO_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_LWS_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MD2_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MD3_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MD5_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MDC_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MDL_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_NFF_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_NDO_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_OFF_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_OGRE_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_OPENGEX_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_PLY_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_MS3D_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_COB_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_BLEND_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_IFC_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_XGL_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_FBX_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_Q3D_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_Q3BSP_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_RAW_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_SIB_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_SMD_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_STL_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_TERRAGEN_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_3D_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_X_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_GLTF_IMPORTER OFF CACHE BOOL "Build importer" )
+set( ASSIMP_BUILD_3MF_IMPORTER OFF CACHE BOOL "Build importer" )
+
 add_subdirectory( assimp )
