Make android builds work super well with cmake!!!!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,18 @@ cmake_minimum_required(VERSION 3.6)
 
 project (Engine)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "Root dir")
+
+set(CP_CMAKE_DIR ${PROJECT_SOURCE_DIR}/cmake)
+
+include(${CP_CMAKE_DIR}/macros.cmake)
 
 IF (EMSCRIPTEN)
   set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin-emscripten )
+ELSEIF (ANDROID)
+  set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin-android )
+  include(${CP_CMAKE_DIR}/android.cmake)
 ELSE ()
   set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin )
 ENDIF ()
@@ -18,7 +26,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH         ${BIN_DIR}/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
-set(CMAKE_BINARY_DIR ${BIN_DIR}/)
+LINK_DIRECTORIES(${BIN_DIR}/lib)
+set(CMAKE_BINARY_DIR ${BIN_DIR})
 
 add_subdirectory(dependencies)
 
@@ -48,6 +57,21 @@ IF (EMSCRIPTEN)
   )
 
   set(ENGINE_INCLUDES
+    ${GLM_INCLUDE_DIRS}
+    ${ASSIMP_INCLUDE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/
+  )
+ELSEIF (ANDROID)
+  add_definitions( -DGLES2=1 )
+  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+  set(ENGINE_LIBS
+    ${SDL2_LIBRARY}
+    ${ASSIMP_LIBRARY}
+  )
+
+  set(ENGINE_INCLUDES
+    ${SDL2_INCLUDE_DIR}
     ${GLM_INCLUDE_DIRS}
     ${ASSIMP_INCLUDE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/
