--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -3,6 +3,12 @@ execute_process( COMMAND git submodule update )
 set_directory_properties( PROPERTIES CLEAN_NO_CUSTOM 1)
 
 IF (EMSCRIPTEN)
+ELSEIF (ANDROID)
+  set( SDL_STATIC ON CACHE BOOL "Build the static SDL library" )
+  set( SDL_SHARED OFF CACHE BOOL "Build the shared SDL library" )
+  # set( SDL_FILESYSTEM FALSE )
+  set( PTHREADS OFF CACHE BOOL "Pthread support" )
+  add_subdirectory( SDL )
 ELSE ()
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/)
   add_library (whereami STATIC ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
