Use https for all submodule urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "dependencies/assimp"]
 	path = dependencies/assimp
-	url = git://github.com/assimp/assimp.git
+	url = https://github.com/assimp/assimp.git
 [submodule "dependencies/SDL"]
 	path = dependencies/SDL
 	url = https://github.com/spurious/SDL-mirror.git
 [submodule "dependencies/glew"]
 	path = dependencies/glew
-	url = git@github.com:Perlmint/glew-cmake.git
+	url = https://github.com/Perlmint/glew-cmake.git
 [submodule "dependencies/glm"]
 	path = dependencies/glm
-	url = git@github.com:g-truc/glm.git
+	url = https://github.com/g-truc/glm.git
 [submodule "dependencies/whereami"]
 	path = dependencies/whereami
 	url = https://github.com/gpakosz/whereami.git
