--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -10,7 +10,7 @@ ELSEIF (ANDROID)
   add_subdirectory( SDL )
 ELSE ()
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/)
-  add_library (whereami STATIC ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
+  add_library (whereami SHARED ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
 
   set( SDL_STATIC OFF CACHE BOOL "Build the static SDL library" )
   set( SDL_SHARED ON CACHE BOOL "Build the shared SDL library" )
