--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ addons:
 
 script:
   - cmake --version
+  - echo $ANDROID_NDK
+  - ./scripts/cmake-android.sh -j4
   - ./scripts/cmake-make.sh -j4
 
 notifications:
