--- a/.travis.yml
+++ b/.travis.yml
@@ -46,12 +46,8 @@ before_script:
         export PATH=${PATH}:${ANDROID_NDK};
     fi"
   - "if [ $TRAVIS_OS_NAME == linux ]; then \
-        if [ `uname -m` == x86_64 ]; then \
-            wget --quiet --continue http://dl.google.com/android/ndk/android-ndk32-r12b-linux-x86_64.tar.bz2 -O ndk.tgz;
-        else
-            wget --quiet --continue http://dl.google.com/android/ndk/android-ndk32-r12b-linux-x86.tar.bz2 -O ndk.tgz;
-        fi;
-        tar -xf ndk.tgz;
+        wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
+        unzip -o ndk.zip;
         export ANDROID_NDK=`pwd`/android-ndk-r12b;
         export PATH=${PATH}:${ANDROID_NDK};
     fi"
