--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ before_script:
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
         unzip -o -q ndk.zip;
         export ANDROID_NDK=`pwd`/android-ndk-r12b;
+        export ANDROID_SDK=/usr/local/android-sdk;
         export PATH=${PATH}:${ANDROID_NDK};
     fi"
 
