--- a/.travis.yml
+++ b/.travis.yml
@@ -41,13 +41,20 @@ addons:
 before_script:
   - "if [ $TRAVIS_OS_NAME == osx ]; then \
         brew update;
-        brew install android-ndk;
+        brew install android-sdk android-ndk ant;
+        export ANDROID_SDK=/usr/local/opt/android-sdk;
         export ANDROID_NDK=/usr/local/opt/android-ndk;
         export PATH=${PATH}:${ANDROID_NDK};
     fi"
   - "if [ $TRAVIS_OS_NAME == linux ]; then \
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
         unzip -o -q ndk.zip;
+
+        wget --quiet --continue http://dl.google.com/android/android-sdk_r24.4.1-linux.tgz;
+        tar -xzf android-sdk_r24.4.1-linux.tgz;
+        echo \"y\" | ./android-sdk-linux/tools/android update sdk -a -u -s -t platform-tools;
+        export ANDROID_SDK=`pwd`/android-sdk-linux;
+
         export ANDROID_NDK=`pwd`/android-ndk-r12b;
         export ANDROID_SDK=/usr/local/android-sdk;
         export PATH=${PATH}:${ANDROID_NDK};
