--- a/.travis.yml
+++ b/.travis.yml
@@ -6,24 +6,24 @@ sudo: false
 
 language:
   - cpp
-  - android
+  # - android
 
 android:
   components:
-    - build-tools-20.0.0
+    # - build-tools-20.0.0
 
     # The SDK version used to compile your project
-    - android-17
+    # - android-17
 
     # Additional components
-    - extra-google-google_play_services
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - addon-google_apis-google-19
+    # - extra-google-google_play_services
+    # - extra-google-m2repository
+    # - extra-android-m2repository
+    # - addon-google_apis-google-19
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
+    # - sys-img-armeabi-v7a-android-17
 
 compiler:
   - clang
@@ -52,7 +52,7 @@ before_script:
 
         wget --quiet --continue http://dl.google.com/android/android-sdk_r24.4.1-linux.tgz;
         tar -xzf android-sdk_r24.4.1-linux.tgz;
-        echo \"y\" | ./android-sdk-linux/tools/android update sdk -a -u -s -t platform-tools,build-tools-24.0.1,android-22;
+        echo \"y\" | ./android-sdk-linux/tools/android update sdk -a -u -s -t platform-tools,build-tools-24.0.1,android-17;
         export ANDROID_SDK=`pwd`/android-sdk-linux;
         export ANDROID_HOME=$ANDROID_SDK;
         export ANDROID_NDK=`pwd`/android-ndk-r12b;
