--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,8 @@ jdk:
 android:
   components:
     - build-tools-24.0.1
-
-    # The SDK version used to compile your project
     - android-22
+    - extra
 
     # Additional components
     # - extra-google-google_play_services
