--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,6 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - gcc-4.8
-    - g++-4.8
     - clang
 
 before_script:
@@ -55,7 +53,4 @@ before_script:
     fi"
 
 script:
-  - cmake --version
-  - echo $ANDROID_NDK
-  - ANDROID_NDK=$ANDROID_NDK ./scripts/cmake-android.sh -j4
-  - ./scripts/cmake-make.sh -j4
+  - ./scripts/travis-build.sh
