Use clang compiler

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ addons:
     - clang
 
 before_script:
-  - "adb version"
+  - "export CC=/usr/bin/clang"
+  - "export CXX=/usr/bin/clang++"
   - "if [ $TRAVIS_OS_NAME == osx ]; then \
         brew update;
         brew install android-ndk ant;
