Re-enable mac build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,10 @@
 os:
   - linux
-  # - osx
+  - osx
 
 sudo: false
 
 language: cpp
-
-# jdk:
-#   - oraclejdk8
-
-# android:
-#   components:
-#     - build-tools-24.0.1
-#     - android-22
 
 compiler:
   - clang
@@ -27,9 +19,9 @@ addons:
 before_script:
   - "if [ $TRAVIS_OS_NAME == osx ]; then \
         brew update;
-        brew install android-ndk ant;
+        brew install android-sdk android-ndk ant;
         export ANDROID_NDK=/usr/local/opt/android-ndk;
-        export PATH=${PATH}:${ANDROID_NDK};
+        export ANDROID_SDK=/usr/local/opt/android-sdk;
     fi"
   - "if [ $TRAVIS_OS_NAME == linux ]; then \
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
@@ -38,12 +30,11 @@ before_script:
 
         wget --quiet --continue http://dl.google.com/android/android-sdk_r24.4.1-linux.tgz;
         tar -xzf android-sdk_r24.4.1-linux.tgz;
-        echo \"y\" | ./android-sdk-linux/tools/android update sdk -a -u -s -t platform-tools,build-tools-24.0.1,android-22;
         export ANDROID_SDK=`pwd`/android-sdk-linux;
-        export ANDROID_HOME=$ANDROID_SDK;
-
-        export PATH=${ANDROID_SDK}/tools:${ANDROID_SDK}/platform-tools:${ANDROID_NDK}:${PATH};
     fi"
+  - "export ANDROID_HOME=$ANDROID_SDK;"
+  - "export PATH=${ANDROID_SDK}/tools:${ANDROID_SDK}/platform-tools:${ANDROID_NDK}:${PATH};"
+  - "echo \"y\" | android update sdk -a -u -s -t platform-tools,build-tools-24.0.1,android-22;"
   - "jdk_switcher use oraclejdk8;"
 
 script:
