--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,12 @@ addons:
 before_script:
   - "if [ $TRAVIS_OS_NAME == osx ]; then \
         brew update;
-        brew install android-sdk android-ndk ant;
-        export ANDROID_NDK=/usr/local/opt/android-ndk;
+        brew install android-sdk ant;
         export ANDROID_SDK=/usr/local/opt/android-sdk;
+
+        wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-darwin-x86_64.zip -O ndk.zip;
+        unzip -o -q ndk.zip;
+        export ANDROID_NDK=`pwd`/android-ndk-r12b;
     fi"
   - "if [ $TRAVIS_OS_NAME == linux ]; then \
         wget --quiet --continue http://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip -O ndk.zip;
