--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,10 @@ before_script:
       wget --quiet --continue https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable.tar.gz;
       tar -xzf emsdk-portable.tar.gz;
 
-      `pwd`/emsdk_portable/emsdk update
-      `pwd`/emsdk_portable/emsdk install latest
-      `pwd`/emsdk_portable/emsdk activate latest
-      source `pwd`/emsdk_portable/emsdk_env.sh
+      `pwd`/emsdk_portable/emsdk update;
+      `pwd`/emsdk_portable/emsdk install latest;
+      `pwd`/emsdk_portable/emsdk activate latest;
+      source `pwd`/emsdk_portable/emsdk_env.sh;
   fi"
 
 script:
