--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
     - cmake-data
     - build-essential
     - clang-3.8
+    - gcc-4.9
+    - g++-4.9
     - libc6-dev-i386
     sources:
     - ubuntu-toolchain-r-test
@@ -65,10 +67,16 @@ before_script:
       wget --quiet --continue https://s3.amazonaws.com/mozilla-games/emscripten/releases/emsdk-portable.tar.gz;
       tar -xzf emsdk-portable.tar.gz;
 
+      export CXX=g++;
+      export CC=gcc;
+
       `pwd`/emsdk_portable/emsdk update;
       `pwd`/emsdk_portable/emsdk install latest;
       `pwd`/emsdk_portable/emsdk activate latest;
       source `pwd`/emsdk_portable/emsdk_env.sh;
+
+      export CXX=clang++;
+      export CC=clang;
   fi"
 
 script:
