--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ addons:
     - cmake-data
     - build-essential
     - clang-3.8
-    - g++-5
-    - gcc-5
-    - libc6-dev-i386
+    # - g++-5
+    # - gcc-5
+    # - libc6-dev-i386
     sources:
     - ubuntu-toolchain-r-test
     - george-edison55-precise-backports
