--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,18 @@ env:
 addons:
   apt:
     packages:
-    - cmake
-    - cmake-data
-    - build-essential
-    - clang-3.8
+    # - cmake
+    # - cmake-data
+    # - build-essential
+    - clang
+    # - clang-3.8
     # - g++-5
     # - gcc-5
     # - libc6-dev-i386
     sources:
     - ubuntu-toolchain-r-test
-    - george-edison55-precise-backports
-    - llvm-toolchain-precise-3.8
+    # - george-edison55-precise-backports
+    # - llvm-toolchain-precise-3.8
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-5"; fi
