First cut add imgui ui system, seems to work yo!
WARNING: HAXZ

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,9 @@ set ( GLM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/glm/ )
 set ( WHEREAMI_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/whereami/src/ )
 set ( WHEREAMI_LIBRARY whereami )
 
+set ( IMGUI_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/imgui/ )
+set ( IMGUI_LIBRARY imgui )
+
 
 IF (EMSCRIPTEN)
   add_definitions( -DGLES2=1 )
@@ -54,11 +57,13 @@ IF (EMSCRIPTEN)
 
   set(ENGINE_LIBS
     ${ASSIMP_LIBRARY}
+    ${IMGUI_LIBRARY}
   )
 
   set(ENGINE_INCLUDES
     ${GLM_INCLUDE_DIRS}
     ${ASSIMP_INCLUDE_DIR}
+    ${IMGUI_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/
   )
 ELSEIF (ANDROID)
@@ -68,12 +73,14 @@ ELSEIF (ANDROID)
   set(ENGINE_LIBS
     ${SDL2_LIBRARY}
     ${ASSIMP_LIBRARY}
+    ${IMGUI_LIBRARY}
   )
 
   set(ENGINE_INCLUDES
     ${SDL2_INCLUDE_DIR}
     ${GLM_INCLUDE_DIRS}
     ${ASSIMP_INCLUDE_DIR}
+    ${IMGUI_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/
   )
 ELSE ()
@@ -86,6 +93,7 @@ ELSE ()
     ${ASSIMP_LIBRARY}
     ${GLEW_LIBRARIES}
     ${WHEREAMI_LIBRARY}
+    ${IMGUI_LIBRARY}
   )
 
   set(ENGINE_INCLUDES
@@ -94,6 +102,7 @@ ELSE ()
     ${ASSIMP_INCLUDE_DIR}
     ${GLEW_INCLUDE_DIRS}
     ${WHEREAMI_INCLUDE_DIRS}
+    ${IMGUI_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/
   )
 ENDIF ()
