--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -162,3 +162,6 @@ add_definitions(-DASSIMP_BUILD_NO_3MF_EXPORTER)
 
 
 add_subdirectory( assimp )
+
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/imgui/)
+add_library (imgui SHARED ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp)
