Only apply windows fix to windows

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -10,8 +10,11 @@ ELSEIF (ANDROID)
   add_subdirectory( SDL )
 ELSE ()
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/)
-  add_library (whereami SHARED ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
-
+  IF (WIN32)
+    add_library (whereami STATIC ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
+  ELSE ()
+    add_library (whereami SHARED ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.c ${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/whereami.h)
+  ENDIF ()
   set( SDL_STATIC OFF CACHE BOOL "Build the static SDL library" )
   set( SDL_SHARED ON CACHE BOOL "Build the shared SDL library" )
   add_subdirectory( SDL )
@@ -164,4 +167,8 @@ add_definitions(-DASSIMP_BUILD_NO_3MF_EXPORTER)
 add_subdirectory( assimp )
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/imgui/)
-add_library (imgui SHARED ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp)
+IF (WIN32)
+  add_library (imgui STATIC ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp)
+ELSE ()
+  add_library (imgui SHARED ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp)
+ENDIF ()
