--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,21 +13,9 @@ set(CP_CMAKE_DIR ${PROJECT_SOURCE_DIR}/cmake)
 
 include(${CP_CMAKE_DIR}/macros.cmake)
 
-IF (EMSCRIPTEN)
-  set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin-emscripten )
-ELSEIF (ANDROID)
-  set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin-android )
-  include(${CP_CMAKE_DIR}/android.cmake)
-ELSE ()
-  set ( BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin )
-ENDIF ()
-
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}/bin)
-set(EXECUTABLE_OUTPUT_PATH         ${BIN_DIR}/bin)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR}/lib)
-LINK_DIRECTORIES(${BIN_DIR}/lib)
-set(CMAKE_BINARY_DIR ${BIN_DIR})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(dependencies)
 
