--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -7,6 +7,7 @@ ELSEIF (ANDROID)
   set( SDL_SHARED OFF CACHE BOOL "Build the shared SDL library" )
   # set( SDL_FILESYSTEM FALSE )
   set( PTHREADS OFF CACHE BOOL "Pthread support" )
+  add_definitions(-DGL_GLEXT_PROTOTYPES)
   add_subdirectory( SDL )
 ELSE ()
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/whereami/src/)
