try trusty ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ os:
   - osx
 
 sudo: false
+dist: trusty
 
 language: cpp
 
@@ -32,13 +33,13 @@ addons:
     # - cmake-data
     # - build-essential
     # - clang
-    - clang-3.6
+    - clang-3.7
     # - g++-5
     # - gcc-5
     # - libc6-dev-i386
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
+    - llvm-toolchain-precise-3.7
     # - george-edison55-precise-backports
 
 install:
