try using cotire for managing precompiled headers for windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "Root dir")
 
 set(CP_CMAKE_DIR ${PROJECT_SOURCE_DIR}/cmake)
-
+include(cotire)
 include(${CP_CMAKE_DIR}/macros.cmake)
 
 IF (ANDROID)
